tests/negative/test_expr_dot_ptr_ptr.orb
data Foo {
    i32 x;
}

fnc main() {
    Foo f1;
    Foo* f2 = &f1;
    Foo** f3 = &f2;
    f3.x;
}